syntax = "proto3";

option csharp_namespace = "AdminService";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package greet;

// The greeting service definition.
service AdminGreeter{
  // Sends a greeting
  rpc GetProducts (UserLoginRequest) returns (GetProductsReply);
  rpc GetShops (UserLoginRequest) returns (GetShopsReply);
  rpc UpdateShop (ShopRequest) returns (ShopReply);
  rpc UpdateProduct (ProductRequest) returns (ProductReply);
  rpc GetShop (ItemRequest) returns (ShopReply);
  rpc GetProduct (ItemRequest) returns (ProductReply);
  rpc RemoveProduct (ItemRequest) returns (BoolReply);
  rpc RemoveShop (ItemRequest) returns (BoolReply);
  rpc AddShop (ShopRequest) returns (BoolReply);
  rpc AddProduct (ProductRequest) returns (BoolReply);
  rpc Health (google.protobuf.Empty) returns (google.protobuf.BoolValue);
  rpc GetProductsInShop (GetProductsInShopRequest) returns (GetProductsInShopReply);
  rpc GetShopsForVisit (GetShopsForVisitRequest) returns (GetShopsForVisitReply);
}

// The request message 
message UserLoginRequest {
  string UserLogin = 1;
}
message ShopRequest {
  ShopDtoMessage ShopDtoMessage = 1;
  string UserLogin = 2;
}
message ProductRequest {
  ProductDtoMessage ProductDtoMessage = 1;
  string UserLogin = 2;
}
message ItemRequest {
  int32 Id =1;
  string UserLogin = 2;
}
message GetProductsInShopRequest {
  int32 ShopId = 1; 
  string UserLogin = 2;
  ListOfWantedProductDto WantedProductList = 3;
}
message GetShopsForVisitRequest {
  string UserLogin = 1;
  ListOfWantedProductDto WantedProductList = 2;
}

// The response message 
message GetShopsReply {
   bool Successfully = 1;
   ListOfShopDto Element =2;
   string ErrorMessage = 3;
}
message GetProductsReply {
   bool Successfully = 1;
   ListOfProductDto Element = 2;
   string ErrorMessage = 3;
}
message ShopReply {
   bool Successfully = 1;
   ShopDtoMessage Element =2;
   string ErrorMessage = 3;
}
message ProductReply {
   bool Successfully = 1;
   ProductDtoMessage Element = 2;
   string ErrorMessage = 3;
}
message BoolReply {
   bool Successfully = 1;
   bool Element =2;
   string ErrorMessage = 3;
}



message ListOfShopDto {
    repeated ShopDtoMessage ShopDtoMessage = 1;
}
message ShopDtoMessage {
		int32 Id = 1;
        string Name =2;
}
message ListOfProductDto {
    repeated ProductDtoMessage ProductDtoMessage = 1;
}
message ProductDtoMessage {
		int32 Id = 1;
        string Name = 2;
        int32 Price = 3;
        int32 ShopId = 4;
}
message GetProductsInShopReply {
   bool Successfully = 1;
   ListOfProductDto Element =2;
   string ErrorMessage = 3;
}
message ListOfWantedProductDto {
    repeated WantedProductDtoMessage wantedProductDtoMessage = 1;
}
message WantedProductDtoMessage {
		int32 Id = 1;
        bool BoughtStatus = 2;
        int32 ProductId = 3;
        int32 WifeId = 4;
}
message GetShopsForVisitReply {
   bool Successfully = 1;
   ListOfShopDto Element =2;
   string ErrorMessage = 3;
}